feat(be): introduce URL Cleanup and Redirection endpoint
